--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,4 +1,4 @@
-.skills{
-    grid-gap:3rem;
-    grid-template-columns: repeat(2, 1fr);
-}
+/* .skills{
+    grid-gap:1rem;
+    grid-template-columns: repeat(4, 1fr);
+} */
